<resources>
    <string name="app_name">AppSitiosTur</string>
    <string name="title_activity_maps">Map</string>

    <!-- Buttons -->
    <string name="bellasArtes_text">AppSitiosTur</string>
    <string name="escom_Text">AppSitiosTur</string>
    <string name="cic_Text">AppSitiosTur</string>
    <string name="Zocalo_Text">AppSitiosTur</string>
    <string name="Guadalajara_text">AppSitiosTur</string>
    <string name="Puebla_Text">AppSitiosTur</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
